//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "my-class" {
  database_type: 'PostgreSQL'
  Note: 'An online classroom management system'
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String
  displayName String
  email String [unique]
  emailVerified DateTime
  image String
  bio String
  location String
  age Int
  gender String
  role String
  createdAt DateTime [default: `now()`, not null]
  accounts Account [not null]
  sessions Session [not null]
  classrooms Classroom [not null]
  enrolledIn Classroom [not null]
  submissions Submission [not null]
  ratings Rating [not null]
  Comment Comment [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Classroom {
  id String [pk]
  name String [not null]
  teacher User [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  language String [not null, default: 'en']
  students User [not null]
  ratings Rating [not null]
  assignments Assignment [not null]
  subjects Subject [not null]
  description String [not null, default: 'No description provided']
  status String [not null, default: 'active']
  modifier String [not null, default: 'public']
  password String
  requirements String [not null, default: 'No requirements provided']
}

Table Subject {
  id String [pk]
  name String [unique, not null]
  description String [not null]
  classrooms Classroom [not null]
}

Table Attachment {
  id String [pk]
  filename String [not null]
  assignment Assignment [not null]
  assignmentId String [not null]
  type String [not null, default: 'attachment']
}

Table Assignment {
  id String [pk]
  name String [not null]
  description String [not null]
  attachments Attachment [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  dueDate String [not null, default: '2023-09-30T00:00:00Z']
  classroom Classroom [not null]
  subject String [not null]
  classroomId String [not null]
  submissions Submission [not null]
  submitRatio Float [not null, default: 0]
  status String [not null, default: 'progressing']
  Comment Comment [not null]
}

Table Submission {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  filename String [not null]
  studentId String [not null]
  student User [not null]
  assignment Assignment [not null]
  assignmentId String [not null]
  grade Float
  Comment Comment [not null]
  status String [not null, default: 'pending']
}

Table Comment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  content String [not null]
  userId String [not null]
  user User [not null]
  assignmentId String
  assignment Assignment
  submissionId String
  submission Submission
}

Table Rating {
  id String [pk]
  studentId String [not null]
  classroomId String [not null]
  description String [not null, default: 'No description provided']
  amount Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  student User [not null]
  classroom Classroom [not null]
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Classroom.userId > User.id

Ref: Attachment.assignmentId > Assignment.id [delete: Cascade]

Ref: Assignment.classroomId > Classroom.id [delete: Cascade]

Ref: Submission.studentId > User.id [delete: Cascade]

Ref: Submission.assignmentId > Assignment.id [delete: Cascade]

Ref: Comment.userId > User.id [delete: Cascade]

Ref: Comment.assignmentId > Assignment.id [delete: Cascade]

Ref: Comment.submissionId > Submission.id [delete: Cascade]

Ref: Rating.studentId > User.id [delete: Cascade]

Ref: Rating.classroomId > Classroom.id [delete: Cascade]